added Text box test

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,10 @@ repositories {
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:6.7.4",
-            'org.junit.jupiter:junit-jupiter:5.9.8'
+            'com.codeborne:selenide:6.7.4',
+            'org.junit.jupiter:junit-jupiter:5.9.0'
     )
 }
-
 test {
     useJUnitPlatform()
 }
